--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,10 @@
 theme: jekyll-theme-architect
 title: Richmond Hill Yellow Page
 description: Serve Richmond Hill neibourhood
+url: 
+languages: ["en", "cn"]
+exclude_from_localizations: ["images"]
+defaultLang: en
+languageNames:
+  cn: Chinese
+  en: English
