--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-architect
 title: Richmond Hill Yellow Page
 description: Serve Richmond Hill neibourhood
-url: 
+url: https://garfieldtony.github.io/RichmondHill/
 languages: ["en", "cn"]
 exclude_from_localizations: ["images"]
 defaultLang: en
